# visualkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  PROJECT_MANUAL.md  README.MD  __init__.py  pyproject.toml  quick_demo.py  requirements.txt
.github/workflows/: ci.yml  release.yml
charts/: __init__.py  base_chart.py  seasonal_chart.py  time_series_chart.py
core/: __init__.py  akshare_client.py  calendar_manager.py  data_processor.py  wind_client.py
example/: demo.ipynb  demo.py
scripts/: publish.py
tests/: conftest.py  test_seasonal_chart.py
utils/: __init__.py  data_formatter.py  template_manager.py
utils/templates/: my_custom_seasonal.json
