[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visualkit"
version = "1.2.0"
description = "A comprehensive financial data visualization toolkit with seasonal and time series charts"
readme = "README.MD"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["visualization", "finance", "charts", "seasonal", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyecharts>=2.0.6",
    "python-dateutil>=2.9.0",
    "chinese-calendar>=1.10.0",
    "akshare>=1.12.0",
    "Jinja2>=3.1.0",
    "requests>=2.31.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/franklooo/visualkit"
Documentation = "https://visualkit.readthedocs.io"
Repository = "https://github.com/franklooo/visualkit"
Issues = "https://github.com/franklooo/visualkit/issues"

[project.scripts]
vtk-demo = "visualkit.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["charts", "core", "utils"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=charts --cov=core --cov=utils --cov-report=html --cov-report=term-missing"
